# grok-build

./: .gitignore  Cargo.toml
channels/feishu/: UPSTREAM.md  package-lock.json  package.json  tsconfig.json
channels/feishu/src/: accounts.ts  api.ts  cli.ts  index.ts  loading.ts  permissions.ts  run-cli.ts  run-serve.ts  send.ts  server.ts  standalone-deps.ts  types.ts  webhook.ts
crates/codegen/xai-grok-channels/: Cargo.toml
crates/codegen/xai-grok-channels/src/: config.rs  gate.rs  lib.rs  types.rs  wrap.rs
crates/codegen/xai-grok-mcp/src/: servers.rs
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager/src/app/: cli.rs  mod.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/src/session/: channel_feishu.rs  managed_mcp.rs  mcp_dispatcher.rs  mod.rs
crates/codegen/xai-grok-shell/src/session/acp_session_impl/: run_loop.rs  spawn.rs
crates/codegen/xai-grok-shell/src/util/config/: load.rs  mcp.rs
docs/superpowers/plans/: 2026-07-16-feishu-channel.md
docs/superpowers/specs/: 2026-07-16-feishu-channel-design.md
