[package]
edition.workspace = true
license = "Apache-2.0"
name = "xai-grok-channels"
version = "0.1.0"
description = "CCB-compatible channel protocol types, message wrap, and server gate for Grok Build"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[lints]
workspace = true
